--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@vitejs/plugin-react": "^4.3.1",
+    "axios": "^1.7.2",
+    "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
+    "firebase": "^10.12.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "vite": "^5.3.4",
-    "@vitejs/plugin-react": "^4.3.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.1",
+    "uuid": "^10.0.0",
+    "vite": "^5.3.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
