--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "rollup": "^4.19.0",
     "uuid": "^10.0.0",
     "vite": "^5.3.4"
   },
