--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vite": "^5.3.4"
   },
   "devDependencies": {
+    "@emotion/eslint-plugin": "^11.12.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
