--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
     "css-loader": "^7.1.2",
     "date-fns": "^3.6.0",
@@ -31,14 +32,18 @@
     "react-router-dom": "^6.25.1",
     "rollup": "^4.19.0",
     "sass-loader": "^15.0.0",
+    "shortid": "^2.2.16",
     "style-loader": "^4.0.0",
     "uuid": "^10.0.0",
     "vite": "^5.3.4"
   },
   "devDependencies": {
     "@emotion/eslint-plugin": "^11.12.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/shortid": "^0.0.32",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8.57.0",
