--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "css-loader": "^7.1.2",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.4",
