--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "rollup": "^4.19.0",
     "shortid": "^2.2.16",
     "style-loader": "^4.0.0",
